--- a/css.css
+++ b/css.css
@@ -1,13 +1,23 @@
+.body{
+  background-color: rgb(173, 134, 209);
+}
 .title{
     font-size: larger;
     text-align: center;
 }
-  ul {
+.Delete-button{
+  color: blue;
+  margin: 10px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.centerTodo {
     list-style-type: none;
     padding: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
 .container{
   display: flex;
