--- a/css.css
+++ b/css.css
@@ -22,8 +22,7 @@
 .container{
   display: flex;
   justify-content: center;
-  align-items: center;
- 
+  align-items: center; 
 }
 .custom-input{
     border-radius: 4px;
@@ -41,14 +40,35 @@
     color: white;
 }
 /* Media query for mobile devices */
-@media (max-width: 768px) {
+@media (max-device-width:480px) {
   .custom-input {
-    width: 100%; /* Make the input box width 100% of the container width for better responsiveness */
-    height: 18px; /* Increase the height for better visibility and touch interaction on mobile devices */
+    width: 100% !important; /* Make the input box width 100% of the container width for better responsiveness */
+    height: 18px !important; /* Increase the height for better visibility and touch interaction on mobile devices */
   }
-
   /* You can also adjust the font-size for better readability on mobile devices */
   .custom-input {
     font-size: 14px;
   }
+
+
+.centerTodo {
+  font-size: x-large;
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+  .Delete-button{
+    font-size: x-large;
+    color: blue;
+    margin: 15px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.title{
+    font-size: x-large;
+    text-align: center;
+}
 }
