--- a/css.css
+++ b/css.css
@@ -6,11 +6,15 @@
     text-align: center;
 }
 .Delete-button{
-  color: blue;
+  color: red;
   margin: 10px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  
 }
-
+.markDoneBtn{
+  background-color: greenyellow;
+  border-radius: 4px;
+}
 .centerTodo {
     list-style-type: none;
     padding: 0;
@@ -18,6 +22,22 @@
     flex-direction: column;
     align-items: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+  .button-container{
+   display: flex;
+   align-items: center;
+  }
+  .div-background{
+   display: flex;
+   align-items: end;
+   justify-content: space-between;
+   padding: 10px;
+   border: 1px solid #ccc;
+   margin-bottom: 10px;
+   width: 400px;
+   background-color:lightgray;
+
+   border-radius: 4px;
   }
 .container{
   display: flex;
